--- a/firefox/userChrome.css
+++ b/firefox/userChrome.css
@@ -1,9 +1,21 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+
+/* Sidebar styling */
 #TabsToolbar {
     visibility: collapse !important;
 }
 
-/* #sidebar-header {
+#sidebar-header {
   display: none;
-} 
-*/
+}
+
+/* Correct input fields when using dark themes */
+input:not(.urlbar-input):not(.textbox-input):not(.form-control):not([type='checkbox']):not([type='radio']), textarea, select {
+    -moz-appearance: none !important;
+    background-color: white;
+    color: black;
+}
+
+#downloads-indicator-counter {
+    color: white;
+}
